--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -1,14 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.SellerController">
+   <children>
+      <Label layoutX="161.0" layoutY="35.0" text="ประเภท" textFill="#c9ad88">
+         <font>
+            <Font name="JasmineUPC" size="36.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="76.0" fitWidth="61.0" layoutX="14.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/logo.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="Typebook11" layoutX="507.0" layoutY="38.0" text="แนะนำ" textFill="#c9ad88">
+         <font>
+            <Font name="JasmineUPC" size="36.0" />
+         </font>
+      </Label>
+      <Button layoutX="49.0" layoutY="340.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Label layoutX="352.0" layoutY="35.0" text="ขายดี" textFill="#c9ad88">
+         <font>
+            <Font name="JasmineUPC" size="36.0" />
+         </font>
+      </Label>
+      <Line endX="-100.0" endY="191.800048828125" layoutX="376.0" layoutY="444.0" startX="-100.0" startY="-338.6000061035156" />
+      <Label layoutX="86.0" layoutY="353.0" text="ข้อมูลส่วนตัว" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Button layoutX="49.0" layoutY="415.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="48.0" layoutY="489.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="49.0" layoutY="569.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Label layoutX="81.0" layoutY="428.0" text="สินค้าในตะกร้า" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="91.0" layoutY="502.0" text="ข้อมูลผู้ขาย" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="96.0" layoutY="582.0" text="ข้อมูลผู้ซื้อ" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Circle fill="#c9ad88" layoutX="137.0" layoutY="220.0" radius="78.0" stroke="WHITE" strokeType="INSIDE" />
+      <Label layoutX="293.0" layoutY="105.0" text="ผู้ขายสินค้า" textFill="#a05e07">
+         <font>
+            <Font name="JasmineUPC" size="42.0" />
+         </font>
+      </Label>
+      <Line endX="-598.2000122070312" endY="-338.6000061035156" layoutX="888.0" layoutY="480.0" startX="66.4000244140625" startY="-338.6000061035156" stroke="#bc986a" strokeWidth="0.5" />
+      <Label layoutX="304.0" layoutY="313.0" text="ชื่อสินค้า">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="296.0" layoutY="418.0" text="จำนวนสินค้าในคลัง">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="288.0" layoutY="523.0" text="รายละเอียดของสินค้า">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="682.0" layoutY="313.0" text="ราคาของสินค้า">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Circle fill="#c9ad88" layoutX="604.0" layoutY="229.0" radius="78.0" stroke="WHITE" strokeType="INSIDE" />
+      <Label layoutX="682.0" layoutY="418.0" text="หมวดหมู่ของสินค้า">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <TextField layoutX="304.0" layoutY="340.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกชื่อสินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+      <TextField layoutX="304.0" layoutY="446.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกจำนวน " style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+      <TextField layoutX="299.0" layoutY="544.0" prefHeight="110.0" prefWidth="470.0" promptText="อธิบายรายละเอียดพอสังเขป" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+      <TextField layoutX="682.0" layoutY="340.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกราคาสินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;">
+         <font>
+            <Font name="JasmineUPC" size="12.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="682.0" layoutY="446.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกหมวดหมู่สินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+      <Label layoutX="393.0" layoutY="685.0" text="กำหนดสินค้าขั้นต่ำ : ">
+         <font>
+            <Font name="JasmineUPC" size="20.0" />
+         </font>
+      </Label>
+      <TextField layoutX="522.0" layoutY="663.0" prefHeight="44.0" prefWidth="199.0" promptText="โปรดระบุจำนวนในคลัง" style="-fx-background-radius: 10; -fx-effect: shadow;" />
+      <Line endX="18.799957275390625" endY="-325.20001220703125" layoutX="425.0" layoutY="433.0" startX="18.799957275390625" startY="-301.3999938964844" stroke="#bc986a" strokeWidth="0.5" />
+      <Label layoutX="454.0" layoutY="107.0" text="เพิ่มสินค้าของคุณ" textFill="#533b1b">
+         <font>
+            <Font name="JasmineUPC" size="34.0" />
+         </font>
+      </Label>
+      <Button layoutX="821.0" layoutY="600.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="821.0" layoutY="663.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Label layoutX="870.0" layoutY="613.0" text="เพิ่มสินค้า" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="857.0" layoutY="676.0" text="สินค้าทั้งหมด" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <TextField layoutX="637.0" layoutY="30.0" prefHeight="44.0" prefWidth="199.0" promptText="USERNAME" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-effect: shadow;" />
+   </children>
 </AnchorPane>
