--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -34,19 +34,19 @@
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="348.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="522.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="348.0" layoutY="358.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="348.0" layoutY="404.0" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="348.0" layoutY="450.0" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="lastnameTextField" layoutX="522.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="usernameTextField" layoutX="348.0" layoutY="358.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="passwordTextField" layoutX="348.0" layoutY="404.0" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="passwordRecheckTextField" layoutX="348.0" layoutY="450.0" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <Text fill="#828282" layoutX="349.0" layoutY="506.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="347.0" layoutY="510.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="441.0" layoutY="510.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField layoutX="582.0" layoutY="510.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthDayTextField" layoutX="347.0" layoutY="510.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthMonthTextField" layoutX="441.0" layoutY="510.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthYearTextField" layoutX="582.0" layoutY="510.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <Text fill="#828282" layoutX="463.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="อีกก้าวเดียวเพื่อเข้าสู่โลกใบใหม่">
          <font>
             <Font name="Calibri" size="14.0" />
@@ -70,6 +70,11 @@
       <Text accessibleRole="BUTTON" fill="#203bc5" layoutX="518.0" layoutY="681.0" strokeType="OUTSIDE" strokeWidth="0.0" text="กลับไปที่หน้าล็อกอิน">
          <font>
             <Font name="Calibri" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#d9b8b8" layoutX="387.0" layoutY="505.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
+         <font>
+            <Font name="Calibri" size="9.0" />
          </font>
       </Text>
    </children>
