--- a/src/main/resources/ku/cs/detailBook.fxml
+++ b/src/main/resources/ku/cs/detailBook.fxml
@@ -15,7 +15,7 @@
    <children>
       <ImageView fitHeight="67.0" fitWidth="73.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../logo.png" />
+            <Image url="@image/logo.png" />
          </image>
       </ImageView>
       <Label layoutX="116.0" layoutY="17.0" text="ประเภท" textFill="#bc986a">
@@ -55,22 +55,22 @@
       </Label>
       <ImageView fitHeight="354.0" fitWidth="308.0" layoutX="48.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../127475.jpg" />
+            <Image url="@image/127475.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="101.0" fitWidth="98.0" layoutX="51.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../127475.jpg" />
+            <Image url="@image/127475.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="101.0" fitWidth="98.0" layoutX="157.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../127475.jpg" />
+            <Image url="@image/127475.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="101.0" fitWidth="98.0" layoutX="261.0" layoutY="481.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../127475.jpg" />
+            <Image url="@image/127475.jpg" />
          </image>
       </ImageView>
       <Label layoutX="378.0" layoutY="172.0" text="ชื่อหนังสือ" textFill="#f99f28">
