--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.RegisterController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegisterController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" />
       <ImageView fitHeight="615.0" fitWidth="410.0" layoutX="321.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
