--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,11 +13,6 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.BookDetailController">
    <children>
-      <Label fx:id="bookTypeLabel" layoutX="158.0" layoutY="35.0" text="ประเภท" textFill="#c9ad88">
-         <font>
-            <Font name="JasmineUPC" size="36.0" />
-         </font>
-      </Label>
       <ImageView fitHeight="76.0" fitWidth="61.0" layoutX="44.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/logo.png" />
@@ -56,7 +54,7 @@
          </font>
       </Label>
       <Line endX="100.0" layoutX="105.0" layoutY="138.0" startX="100.0" startY="-27.800018310546875" stroke="#b09f9f" />
-      <Label layoutX="222.0" layoutY="111.0" text="แฟนตาซี" textFill="#b09f9f">
+      <Label layoutX="222.0" layoutY="111.0" text="หนังสือการ์ตูน" textFill="#b09f9f">
          <font>
             <Font name="JasmineUPC" size="36.0" />
          </font>
@@ -66,7 +64,7 @@
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="314.0" layoutY="206.0" text="ชื่อร้านค้า" textFill="#f99f28">
+      <Label layoutX="312.0" layoutY="206.0" text="ชื่อร้านค้า" textFill="#f99f28">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
@@ -107,12 +105,12 @@
             <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="312.0" layoutY="534.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
+      <Label layoutX="312.0" layoutY="571.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Line endX="100.0" layoutX="197.0" layoutY="509.0" startX="772.4000244140625" stroke="#b09f9f" />
+      <Line endX="100.0" layoutX="206.0" layoutY="547.0" startX="772.4000244140625" stroke="#b09f9f" />
       <Label fx:id="bookNameLabel" layoutX="434.0" layoutY="167.0" text="bookNameLabel">
          <font>
             <Font name="JasmineUPC" size="30.0" />
@@ -123,10 +121,87 @@
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Label fx:id="bookStatusLabel" layoutX="434.0" layoutY="241.0" text="bookStatusLabel">
+      <Label fx:id="bookStatusLabel" layoutX="434.0" layoutY="241.0" text="bookStatusLabel" textFill="#ae0505">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
+      <Label layoutX="427.0" layoutY="345.0" />
+      <Label layoutX="434.0" layoutY="345.0" />
+      <Label fx:id="bookTypeLabel" layoutX="434.0" layoutY="342.0" text="bookTypeLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookPageLabel" layoutX="434.0" layoutY="373.0" text="bookPageLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookISBNLabel" layoutX="434.0" layoutY="402.0" text="bookISBNLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookPublisherLabel" layoutX="434.0" layoutY="434.0" text="bookPublisherLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookAuthorLabel" layoutX="434.0" layoutY="465.0" text="bookAuthor">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookDetailLabel" layoutX="337.0" layoutY="605.0" text="bookSummaryLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Button layoutX="784.0" layoutY="676.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="เพิ่มสินค้าลงในตะกร้า" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Button>
+      <Label layoutX="338.0" layoutY="497.0" text="ราคา :">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="bookPriceLabel" layoutX="434.0" layoutY="496.0" text="bookPriceLabel">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="284.0" fitWidth="194.0" layoutX="51.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/book10_horimiya_cartoon.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="121.0" fitWidth="84.0" layoutX="22.0" layoutY="466.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+         <image>
+            <Image url="@image/book12_horimiya_cartoon.jpg" />
+         </image>
+      </ImageView>
+      <ImageView blendMode="SRC_ATOP" fitHeight="144.0" fitWidth="84.0" layoutX="113.0" layoutY="465.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+         <image>
+            <Image url="@image/book13_horimiya_cartoon.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="133.0" fitWidth="80.0" layoutX="212.0" layoutY="469.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/book11_horimiya_cartoon.jpg" />
+         </image>
+      </ImageView>
+      <MenuButton layoutX="130.0" layoutY="31.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
+         <items>
+            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
+            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
+            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
+         </items>
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </MenuButton>
    </children>
 </AnchorPane>
