--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -48,11 +50,6 @@
             <Font name="System Bold" size="50.0" />
          </font>
       </Label>
-      <Button layoutX="113.0" layoutY="17.0" mnemonicParsing="false" onAction="#handleLinkToTypeButton" style="-fx-background-color: while;" text="ประเภท" textFill="#bc986a">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Button>
       <Button layoutX="271.0" layoutY="17.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
          <font>
             <Font size="30.0" />
@@ -156,5 +153,15 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="183.0" layoutX="788.0" layoutY="459.0" stroke="#c4c4c4" strokeType="INSIDE" width="200.0" />
+      <MenuButton accessibleRole="LIST_VIEW" layoutX="100.0" layoutY="34.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
+         <items>
+            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
+            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
+            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
+         </items>
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </MenuButton>
    </children>
 </AnchorPane>
