--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -67,15 +67,15 @@
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <Text accessibleRole="BUTTON" fill="#203bc5" layoutX="518.0" layoutY="681.0" strokeType="OUTSIDE" strokeWidth="0.0" text="กลับไปที่หน้าล็อกอิน">
-         <font>
-            <Font name="Calibri" size="14.0" />
-         </font>
-      </Text>
       <Text fill="#d9b8b8" layoutX="387.0" layoutY="505.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
          <font>
             <Font name="Calibri" size="9.0" />
          </font>
       </Text>
+      <Button layoutX="517.0" layoutY="661.0" mnemonicParsing="false" style="-fx-background-color: white;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5" onAction="#handleToLoginButton">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
