--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -72,7 +72,7 @@
             <Font name="Calibri" size="9.0" />
          </font>
       </Text>
-      <Button layoutX="517.0" layoutY="661.0" mnemonicParsing="false" style="-fx-background-color: white;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5" onAction="#handleToLoginButton">
+      <Button layoutX="517.0" layoutY="661.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: white;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
          <font>
             <Font size="14.0" />
          </font>
