--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,69 +14,73 @@
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegisterController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" />
-      <ImageView fitHeight="615.0" fitWidth="410.0" layoutX="321.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="615.0" fitWidth="410.0" layoutX="324.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/BG01.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="87.0" fitWidth="90.0" layoutX="465.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="87.0" fitWidth="90.0" layoutX="465.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/Icon01.png" />
          </image>
       </ImageView>
-      <Text layoutX="341.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สร้างบัญชี">
+      <Text layoutX="341.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สร้างบัญชี">
          <font>
             <Font name="Calibri" size="30.0" />
          </font>
       </Text>
-      <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="504.0" layoutY="165.0" startX="-63.0" startY="-1.52587890625E-5" />
-      <Text fill="#828282" layoutX="382.0" layoutY="580.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เมื่อคลิก สมัคร แสดงว่าคุณยินยอมตามข้อกำหนด">
+      <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="504.0" layoutY="106.0" startX="-63.0" startY="-1.52587890625E-5" />
+      <Text fill="#828282" layoutX="382.0" layoutY="544.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เมื่อคลิก สมัคร แสดงว่าคุณยินยอมตามข้อกำหนด">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="lastNameTextField" layoutX="522.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="358.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="passwordTextField" layoutX="348.0" layoutY="404.0" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="passwordRecheckTextField" layoutX="348.0" layoutY="450.0" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <Text fill="#828282" layoutX="349.0" layoutY="506.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
+      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="userNameTextField" layoutX="347.0" layoutY="296.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="passwordTextField" layoutX="348.0" layoutY="346.0" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="passwordRecheckTextField" layoutX="348.0" layoutY="397.0" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <Text fill="#828282" layoutX="349.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="birthDayTextField" layoutX="347.0" layoutY="510.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="birthMonthTextField" layoutX="441.0" layoutY="510.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="birthYearTextField" layoutX="582.0" layoutY="510.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <Text fill="#828282" layoutX="463.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="อีกก้าวเดียวเพื่อเข้าสู่โลกใบใหม่">
+      <TextField fx:id="birthDayTextField" layoutX="347.0" layoutY="474.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthMonthTextField" layoutX="441.0" layoutY="475.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthYearTextField" layoutX="582.0" layoutY="475.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <Text fill="#828282" layoutX="462.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="อีกก้าวเดียวเพื่อเข้าสู่โลกใบใหม่">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <Text fill="#828282" layoutX="402.0" layoutY="599.0" strokeType="OUTSIDE" strokeWidth="0.0" text="นโยบายข้อมูล และนโยบายคุกกี้ของเราแล้ว">
+      <Text fill="#828282" layoutX="402.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="นโยบายข้อมูล และนโยบายคุกกี้ของเราแล้ว">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <Button layoutX="454.0" layoutY="617.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="114.0" style="-fx-background-color: B78748;" text="สมัคร" textFill="WHITE">
+      <Button layoutX="454.0" layoutY="581.0" mnemonicParsing="false" onAction="#registerButton" prefHeight="34.0" prefWidth="114.0" style="-fx-background-color: B78748;" text="สมัคร" textFill="WHITE">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Button>
-      <Text fill="#828282" layoutX="398.0" layoutY="681.0" strokeType="OUTSIDE" strokeWidth="0.0" text="หากคุณมีบัญชีอยู่แล้ว">
+      <Text fill="#828282" layoutX="398.0" layoutY="642.0" strokeType="OUTSIDE" strokeWidth="0.0" text="หากคุณมีบัญชีอยู่แล้ว">
          <font>
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <Text fill="#d9b8b8" layoutX="387.0" layoutY="505.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
+      <Text fill="#d9b8b8" layoutX="387.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
          <font>
             <Font name="Calibri" size="9.0" />
          </font>
       </Text>
-      <Button layoutX="517.0" layoutY="661.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: white;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
+      <Button layoutX="517.0" layoutY="623.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: FCFCFC;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <Label fx:id="userNameCheckLabel" layoutX="347.0" layoutY="324.0" text="11111111111" />
+      <Label fx:id="passwordConditionCheckLabel" layoutX="349.0" layoutY="374.0" text="2222222222222222" />
+      <Label fx:id="passwordCompareLabel" layoutX="349.0" layoutY="425.0" text="333333333" />
    </children>
 </AnchorPane>
+
