register update 004 final mong

--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -38,7 +38,7 @@
       </Text>
       <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="userNameTextField" layoutX="347.0" layoutY="296.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="userNameTextField" layoutX="347.0" layoutY="296.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" onKeyReleased="#keyUserName" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <Text fill="#828282" layoutX="349.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
          <font>
             <Font name="Calibri" size="14.0" />
