--- a/src/main/resources/ku/cs/sellerStock.fxml
+++ b/src/main/resources/ku/cs/sellerStock.fxml
@@ -92,11 +92,11 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="bookNameLabel2" layoutX="514.0" layoutY="602.0" text="bookNameLabel">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
+<!--      <Label fx:id="bookNameLabel2" layoutX="514.0" layoutY="602.0" text="bookNameLabel">-->
+<!--         <font>-->
+<!--            <Font size="18.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
       <Label layoutX="515.0" layoutY="228.0" text="ราคาสินค้า">
          <font>
             <Font name="JasmineUPC" size="28.0" />
@@ -127,27 +127,27 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="bookPriceLabe1" layoutX="518.0" layoutY="256.0" text="bookPriceLabel">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookPriceLabel2" layoutX="516.0" layoutY="675.0" text="bookPriceLabel">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookStockLabel0" layoutX="672.0" layoutY="166.0" text="bookStockLabel">
+<!--      <Label fx:id="bookPriceLabe1" layoutX="518.0" layoutY="256.0" text="bookPriceLabel">-->
+<!--         <font>-->
+<!--            <Font size="18.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
+<!--      <Label fx:id="bookPriceLabel2" layoutX="516.0" layoutY="675.0" text="bookPriceLabel">-->
+<!--         <font>-->
+<!--            <Font size="18.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
+      <Label fx:id="bookStockLabel0" layoutX="672.0" layoutY="166.0" text="bookStockLabel" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f3efef" height="65.0" layoutX="723.0" layoutY="384.0" stroke="WHITE" strokeType="INSIDE" width="180.0" />
-      <Label fx:id="bookStockLabel1" layoutX="722.0" layoutY="399.0" text="bookStockLabel">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
+<!--      <Label fx:id="bookStockLabel1" layoutX="722.0" layoutY="399.0" text="bookStockLabel" textAlignment="CENTER">-->
+<!--         <font>-->
+<!--            <Font name="System Bold" size="24.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
       <Button fx:id="decreaseBookButton" layoutX="726.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleDecreaseStockButton" prefHeight="42.0" prefWidth="47.0" style="-fx-background-color: #f3efef;" text="-">
          <font>
             <Font name="JasmineUPC" size="24.0" />
